langtools/test/tools/javac/StringsInSwitch/BadlyTypedLabel1.out
BadlyTypedLabel1.java:13:14: compiler.err.prob.found.req: int, java.lang.String
1 error
